fixes thumbnail squishing

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,10 @@
 .thumbnail {
-  width:100px;
   height:100px;
+  width:100px;
+  object-fit: cover;
 }
 .edit-container {
+
   display: inline-block;
   border: 1px solid gray;
 }
